sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:26: error: not found: value c
   if (c==0){
       ^